--- a/02.Dance Club/styles/responsive.css
+++ b/02.Dance Club/styles/responsive.css
@@ -1,13 +1,13 @@
 @media (max-width: 800px) {
-    body header {
-      
-    }
+   
+   
     body header nav{
         flex-direction: column;
     }
    nav ul{
         flex-direction: column;
         align-items: center;
+        padding: unset;
     }
     .trainings{
         flex-direction: column;
